Drop column language_id in tables order_status_translations and order_payment_status_translations. Change methods for return two languages in one dto.